# rosco

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
doc/: how-ros-works.latex
src/: rosco-core.h  rosco-dispatch.c  rosco-dispatch.h  rosco-error.h  rosco-http-client.c  rosco-http-util.c  rosco-http-util.h  rosco-machgen.c  rosco-machgen.h  rosco-message-context.c  rosco-message.h  rosco-mutable-xml.h  rosco-node-internals.h  rosco-node.c  rosco-node.h  rosco-publisher.h  rosco-rpc.h  rosco-serialization-functions.h  rosco-subscription.h  rosco-tcp-client.c  rosco-tcp-client.h  rosco-type-system.c  rosco-type-system.h  rosco-types.h  rosco-xml-escaper.c  rosco-xml-parser.c  rosco-xml-parser.h  rosco-xml.c  rosco-xml.h  rosco-xmlrpc-client.c  rosco-xmlrpc-client.h  rosco-xmlrpc-server.c  rosco-xmlrpc-server.h  rosco.h
src/dsk/: dsk-ascii-chartable.inc  dsk-base64-char-table.inc  dsk-base64-value-table.inc  dsk-base64.h  dsk-byte-name-table.inc  dsk-cmdline.c  dsk-common.h  dsk-contained-array-macros.h  dsk-daemon.c  dsk-digit-chartables.inc  dsk-dir.c  dsk-dispatch.c  dsk-dns-client.c  dsk-git-ref  dsk-http-client-stream.c  dsk-http-client-stream.h  dsk-http-header-parsing.c  dsk-http-ident-chartable.inc  dsk-http-server.c  dsk-http-server.h  dsk-network-interface-list.c  dsk-octet-listener-socket.c  dsk-pattern-char-classes.inc  dsk-rand.c  dsk-tmp-array-macros.h  dsk-url.h  dsk-xml-binding.c  dsk-xml-parser.c  dsk-xml.c  dsk-xml.h  dsk-xmlrpc.c  dsk-xmlrpc.h  dsk.h
src/internals/: rosco-buffer.c  rosco-buffer.h  rosco-dispatch.h  rosco-http-client.c  rosco-http-client.h  rosco-http-util.h  rosco-mutable-xml.h  rosco-tcp-client.c  rosco-tcp-client.h  rosco-xmlrpc-client.h
src/tools/: ros-topic-list.c  rosco-codegen-main.c  rosco-message-codegen.h
srv/rosco/: GetLoggers.srv
srv/std_srvs/: GetLoggers.srv
